--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,38 @@
-body{
-	background-color: red;
-	
+* {
+	margin: 0;
+	padding: 0;
+	font-family: arial;
+}
+.clearfix {
+	clear: both;
+}
+#container {
+	background-color: silver;
+	margin: 0 auto;
+	width: 100%;
+	height: 100%;
+}
+header{
+	background-color: indigo;
+	width: 100%;
+	color:white;
+
+}
+#left_header{
+	padding:30px 0;
+	float: left;
+}
+nav {
+	float: right;
+}
+nav ul li {
+	float:left;
+	padding: 57px 30px;
+	font-size: 20px;
+	 list-style-type: none;
+	margin: 0 2px;
+	font-weight: bold;
+}
+nav ul li:hover{
+	background-color: orange;
 }
