--- a/styles/style.css
+++ b/styles/style.css
@@ -38,6 +38,20 @@ nav ul li:hover{
 }
 .red{
 	background-color: red;
-	height: 100%;
+	height: 700px;
 	width: 100%;
+}
+section h1{
+	text-align: center;
+	font-size: 30px;
+	padding: 20px;
+}
+footer{
+	width: 100%;
+	height: 90px;
+	background-color: black;
+	color:white;
+}
+footer h3{
+	text-align: center;
 }
