--- a/styles/style.css
+++ b/styles/style.css
@@ -41,16 +41,29 @@ nav ul li:hover{
 	height: 700px;
 	width: 100%;
 }
+section{
+	padding: 0 5%;
+}
 section h1{
 	text-align: center;
 	font-size: 30px;
 	padding: 20px;
+}
+article{
+	width: 30%;
+	float:left;
+}
+.art_title{
+	padding: 5% 0;
+
 }
 footer{
 	width: 100%;
 	height: 90px;
 	background-color: black;
 	color:white;
+	margin-top: 20px;
+	padding-top: 20px;
 }
 footer h3{
 	text-align: center;
