--- a/styles/style.css
+++ b/styles/style.css
@@ -7,13 +7,13 @@
 	clear: both;
 }
 #container {
-	background-color: silver;
+	
 	margin: 0 auto;
 	width: 100%;
 	height: 100%;
 }
 header{
-	background-color: indigo;
+	background-color: black;
 	width: 100%;
 	color:white;
 
@@ -38,7 +38,7 @@ nav ul li:hover{
 }
 .red{
 	background-color: red;
-	height: 700px;
+	height: 300px;
 	width: 100%;
 }
 section{
@@ -60,10 +60,13 @@ article{
 footer{
 	width: 100%;
 	height: 90px;
-	background-color: black;
-	color:white;
+	background-color: #F8F8F8;
+	
 	margin-top: 20px;
 	padding-top: 20px;
+}
+footer section{
+	padding: 0 5%;
 }
 footer h3{
 	text-align: center;
