--- a/styles/style.css
+++ b/styles/style.css
@@ -20,7 +20,7 @@ header{
 
 }
 #left_header{
-	padding:30px 0;
+	padding:15px 0;
 	float: left;
 }
 nav {
@@ -28,17 +28,19 @@ nav {
 }
 nav ul li {
 	float:left;
-	padding: 57px 30px;
+	padding: 27px 17px;
 	font-size: 20px;
 	 list-style-type: none;
 	margin: 0 2px;
 	font-weight: bold;
 }
 nav ul li:hover{
-	background-color: orange;
+	color: white;
+	background-color: #595859;
+
 }
 .red{
-	background-color: red;
+	background-color: silver;
 	height: 300px;
 	width: 100%;
 }
