--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,9 @@
 	padding: 0;
 	font-family: arial;
 }
+body{
+	height: 100%;
+}
 .clearfix {
 	clear: both;
 }
@@ -32,7 +35,7 @@ nav ul li {
 	font-size: 20px;
 	 list-style-type: none;
 	margin: 0 2px;
-	font-weight: bold;
+	
 }
 nav ul li:hover{
 	color: white;
@@ -46,6 +49,7 @@ nav ul li:hover{
 }
 section{
 	padding: 0 5%;
+	
 }
 section h1{
 	text-align: center;
@@ -55,9 +59,20 @@ section h1{
 article{
 	width: 30%;
 	float:left;
+
 }
 .art_title{
 	padding: 5% 0;
+	
+}
+.second_section{
+	background-image: url(../images/Hair.jpg);
+	background-size: 100%;
+	width: 100%;
+	height: 100%;
+	background-repeat: no-repeat;
+	padding:0;
+	margin:0;
 
 }
 footer{
@@ -67,10 +82,12 @@ footer{
 	
 	margin-top: 20px;
 	padding-top: 20px;
+	
+ 
 }
-footer section{
+.footer{
 	padding: 0 5%;
 }
-footer h3{
+.footer h3{
 	text-align: center;
 }
