second section image modified

--- a/styles/style.css
+++ b/styles/style.css
@@ -67,10 +67,9 @@ article{
 }
 .second_section{
 	background-image: url(../images/hair2.jpg);
-	background-size: 100%;
-	width: 100%;
-	height: 100%;
-	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center center;
+	
 	padding:0;
 	margin:0;
 
@@ -84,10 +83,14 @@ article{
 .second_section p{
 	color: white; 
 	text-indent: 50px;
-	padding: 30 100px 0 100px;
+	padding: 0 80px 10px 80px;
 	font-size: 18px;
 	 line-height: 200%;
 
+}
+.second_sectcion_p{
+	width: 90%;
+	height: 90%;
 }
 footer{
 	width: 100%;
