--- a/styles/style.css
+++ b/styles/style.css
@@ -71,13 +71,13 @@ article{
 	background-position: center center;
 	
 	padding:0;
-	margin:0;
+	margin-top: 20px;
 
 }
 .second_section h1{
 		text-align: center;
 		color:white;
-		padding-top: 15px;
+		padding-top: 20px;
 
 }
 .second_section p{
@@ -88,10 +88,7 @@ article{
 	 line-height: 200%;
 
 }
-.second_sectcion_p{
-	width: 90%;
-	height: 90%;
-}
+
 footer{
 	width: 100%;
 	height: 90px;
