--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,7 @@ body{
 	
 	margin: 0 auto;
 	width: 80%;
-	height: 100%;
+	
 }
 
 header{
@@ -69,9 +69,9 @@ article{
 	background-image: url(../images/hair2.jpg);
 	background-size: cover;
 	background-position: center center;
-	
 	padding:0;
 	margin-top: 20px;
+
 
 }
 .second_section h1{
@@ -85,10 +85,14 @@ article{
 	text-indent: 50px;
 	padding: 0 80px 10px 80px;
 	font-size: 18px;
-	 line-height: 200%;
+	 line-height: 170%;
+
 
 }
-
+.second_section_p{
+	
+	width: 100%;
+}
 footer{
 	width: 100%;
 	height: 90px;
