--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,7 @@
 	margin: 0;
 	padding: 0;
 	font-family: arial;
+	color: #666;
 }
 body{
 	height: 100%;
@@ -71,7 +72,7 @@ article{
 	background-position: center center;
 	padding:0;
 	margin-top: 20px;
-
+	background-attachment: fixed;
 
 }
 .second_section h1{
