--- a/styles/style.css
+++ b/styles/style.css
@@ -24,8 +24,15 @@ header a{
 		color: #666;
 	}
 #left_header{
-	padding:15px 0;
+	padding:15px 0 0 0 ;
 	float: left;
+	transition: border 1s;
+}
+#left_header h1{
+	margin-bottom: 0;
+}
+#left_header:hover{
+	border-bottom: solid 4px;
 }
 nav {
 	float: right;
