--- a/styles/style.css
+++ b/styles/style.css
@@ -109,10 +109,11 @@ article img{
 .second_section p{
 	color: white; 
 	text-indent: 50px;
+	max-width: 900px;
 	padding: 0 50px 10px 50px;
 	font-size: 18px;
 	 line-height: 170%;
-	 margin-bottom: 0;
+	 margin: 0 auto;
 
 
 }
