--- a/styles/style.css
+++ b/styles/style.css
@@ -142,7 +142,8 @@ article img{
 .my_work_article p{
 	max-width: 900px;
 	margin: 0 auto;
-	line-height: 170%;
+	line-height: 200%;
+	padding-bottom: 15px;
 }
 .img1{
 	background-image: url(../images/wed-1.jpg);
@@ -238,4 +239,11 @@ footer{
 	list-style-type: none;
 	display: inline-block;
 	padding: 5px;
+}
+@media screen and (max-width: 650px){
+	
+	.footer h3{
+		margin-bottom: 0;
+		font-size: 20px;
+	}
 }
