--- a/styles/style.css
+++ b/styles/style.css
@@ -126,6 +126,11 @@ article img{
 	float:left;
 	
 }
+@media screen and (max-width: 650px){
+	.myGallery img{
+		width: 50%;
+	}
+}
 .my_work img{
 	width: 30%;
 	float: left;
@@ -241,9 +246,13 @@ footer{
 	padding: 5px;
 }
 @media screen and (max-width: 650px){
-	
+	.footer{
+
+		text-align: center;
+	}
 	.footer h3{
 		margin-bottom: 0;
 		font-size: 20px;
+		
 	}
 }
