--- a/styles/style.css
+++ b/styles/style.css
@@ -38,12 +38,13 @@ nav {
 	float: right;
 }
 nav ul li {
-	float:left;
+	
 	padding: 27px 17px;
 	font-size: 20px;
 	list-style-type: none;
 	margin: 0 2px;
 	transition: background 2s;
+	display: inline-block;
 	
 }
 nav ul li a{
@@ -56,7 +57,32 @@ nav ul li:hover{
 nav ul li a:hover{
 	color:white;
 }
-
+@media screen and (max-width: 650px){
+	#home{
+		width: 100%;
+	}
+	#left_header{
+		width: 100%;
+		text-align: center;
+	}
+	nav{
+		width: 100%;
+		text-align: center;
+	}
+	nav ul{
+		width: 100%;
+		margin-bottom: 0;
+	}
+	nav ul li{
+		font-size: 15px;
+		padding: 10px;
+	}
+}
+@media screen and (max-width: 400px){
+	nav ul li{
+		font-size: 10px;
+	}
+}
 .red img{
 	height: 80%;
 	width: 100%;
