--- a/styles/style.css
+++ b/styles/style.css
@@ -335,6 +335,7 @@ footer{
 }
 .footer h3{
 	text-align: center;
+	margin-bottom: 10px;
 }
 .footer li{
 	list-style-type: none;
@@ -354,8 +355,10 @@ footer{
 		text-align: center;
 	}
 	.footer h3{
-		margin-bottom: 0;
-		font-size: 20px;
 		
+		font-size: 20px;
+	}
+	.footer form{
+		width: 100%;
 	}
 }
