--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,9 @@ body{
 	width: 80%;
 	
 }
-
+.logo{
+	font-family: 'Permanent Marker', cursive;
+}
 header{
 	width: 100%;
 	}
@@ -334,11 +336,39 @@ article img{
 footer{
 	width: 100%;
 	height: 100%;
-	background-color: #E5E5E5;
+	background-color:  #595859;
 	
 	padding-top: 20px;
 	
  
+}
+.footer-logo{
+	background-color:#E5E5E5;
+	color: #595859;
+	text-align: center;
+	padding: 20px;
+
+}
+.nav-footer{
+	width: 100%;
+	
+}
+.nav-footer ul li{
+	position: relative;
+	padding: 27px 17px 0px 17px;
+	font-size: 20px;
+}
+.nav-footer ul li:after{
+ content: '/';
+ position: absolute;
+
+ right:-5px;
+}
+.nav-footer ul li:last-child:after {
+ content: " "; 
+}
+.nav-footer ul li a{
+	color: #595859;
 }
 .footer{
 	padding: 0 5%;
@@ -349,19 +379,43 @@ footer{
 }
 .footer h3{
 	text-align: center;
-	margin-bottom: 10px;
+	margin-bottom: 20px;
+	font-size: 15px;
+	color: #E5E5E5;
 }
-.footer li{
+.footer-logo{
+	padding: 65px;
+}
+.footer-logo li{
 	list-style-type: none;
 	display: inline-block;
-	padding: 5px;
+	
+	text-align: center;
+}
+.footer-logo li i{
+	color: #595859;
+	padding:10px;
+	;background-color: 6
 }
 .footer form{
-	float: right;
+	margin: 0 auto;
 	padding-bottom: 15px;
+	width: 350px;
+	text-align: center;
+}
+.footer form label{
+text-transform: capitalize;
+color: #E5E5E5;
+font-size: 25px;
 }
 .footer form input{
 	margin-bottom: 10px;
+}
+.footer form button{
+	width: 110px;
+	border-radius: 20px;
+	margin: 0 auto;
+	height: 50px;
 }
 @media screen and (max-width: 650px){
 	.footer{
