more work on footer

--- a/styles/style.css
+++ b/styles/style.css
@@ -430,3 +430,18 @@ font-size: 25px;
 		width: 100%;
 	}
 }
+@media screen and (max-width: 400px){
+	.footer-logo{
+		padding: 10px 0px 10px 0px;
+
+	}
+}
+@media screen and (max-width: 730px){
+	
+	.nav-footer ul li{
+		font-size: 15px;
+		padding: 10px;
+	}
+
+	
+}
