--- a/styles/style.css
+++ b/styles/style.css
@@ -60,6 +60,10 @@ nav ul li a{
 	text-decoration: none;
 	color: #E5E5E5;
 }
+nav ul li a:hover{
+	text-decoration: none;
+	color: #E5E5E5;
+}
 @media screen and (max-width: 950px){
 	#home{
 		width: 100%;
