--- a/styles/style.css
+++ b/styles/style.css
@@ -206,6 +206,27 @@ article img{
 	padding-bottom: 15px;
 	color: white;
 }
+.testimon{
+	width: 80%;
+	margin: 0 auto;
+	margin-top: 40px;
+	margin-bottom: 55px;
+}
+.testimon-title{
+	text-align:center;
+	margin-bottom: 45px;
+}
+.testimon-body{
+	width: 70%;
+	margin:0 auto;
+}
+.testimon-body h4{
+	text-align: center;
+	margin-bottom:35px;
+}
+.clients p{
+	font-family: 'Playfair Display';
+}
 @media screen and (max-width: 650px){
 	.my_work img{
 		width: 90%;
